# ros2_shm_msgs

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  package.xml
config/: shm_cyclonedds.xml  shm_fastdds.xml
cuda/: CMakeLists.txt  cuda_hello_world.cu  cuda_image_container.cpp  cuda_image_container.hpp  cuda_image_listener.hpp  cuda_image_node.cpp  cuda_image_talker.hpp  gmat_image_container.cpp  gmat_image_container.hpp  gmat_image_listener.hpp  gmat_image_node.cpp  gmat_image_talker.hpp  intra_gmat_listener.hpp  intra_gmat_node.cpp  intra_gmat_talker.hpp
doc/: point_cloud_conversion.hpp  test_pointcloud_conversion.cpp
doc/design/: fixed_length_struct.md  performance_of_distributed_sys.md
doc/docker/: docker_install.md
doc/ref/: string__builder.hpp  string__struct.hpp  string__traits.hpp
docker/scripts/: ga_into.sh  ga_start.sh
include/shm_msgs/: array_helper.hpp  fill_image.hpp  image_encodings.hpp  open3d_conversions.hpp  opencv_conversions.hpp  pcl_conversions.h  point_cloud2_iterator.hpp  point_cloud2_iterator_1m.hpp  point_cloud2_iterator_2m.hpp  point_cloud2_iterator_4m.hpp  point_cloud2_iterator_512k.hpp  point_cloud2_iterator_8k.hpp  point_cloud2_iterator_8m.hpp  point_field_conversion.hpp  rgb_colors.hpp
include/shm_msgs/impl/: open3d_conversions.hpp  point_cloud2_iterator.hpp  point_cloud2_iterator_8k.hpp
include/shm_msgs/msg/: image.h  image.hpp  point_cloud2.h  point_cloud2.hpp
intra/: CMakeLists.txt  intra_image_listener.hpp  intra_image_node.cpp  intra_image_talker.hpp  intra_int_node.cpp  intra_str_node.cpp  mat_image_container.cpp  mat_image_container.hpp  mat_image_listener.hpp  mat_image_node.cpp  mat_image_talker.hpp
launch/: image_listener.launch.py  image_multisub.launch.py  image_syncer.launch.py  image_talker.launch.py  shm_image_bridge.launch.py  shm_pcl_bridge.launch.py
lib/: CMakeLists.txt  open3d_conversions.cpp  opencv_conversions.cpp  pcl_conversions.cpp  rgb_colors.cpp
msg/: CompressedImage.msg  Header.msg  Image.msg  Image1m.msg  Image2m.msg  Image4m.msg  Image512k.msg  Image8k.msg  Image8m.msg  PointCloud1m.msg  PointCloud2m.msg  PointCloud4m.msg  PointCloud512k.msg  PointCloud8k.msg  PointCloud8m.msg  PointField.msg  String.msg
res/pcd/: 2k.pcd  bunny.pcd
scripts/: .bashrc  docker_adduser.sh  ga_base.sh
src/: CMakeLists.txt  image1m_listener.cpp  image1m_talker.cpp  image2m_listener.cpp  image2m_talker.cpp  image8m_listener.cpp  image8m_talker.cpp  image_listener.cpp  image_syncer.cpp  image_talker.cpp  open3d2m_listener.cpp  open3d2m_talker.cpp  open3d_listener.cpp  open3d_talker.cpp  pc_listener.cpp  pc_talker.cpp  pcl1m_listener.cpp  pcl1m_talker.cpp  pcl2m_listener.cpp  pcl2m_talker.cpp  pcl8k_listener.cpp  pcl8k_talker.cpp  pcl_listener.cpp  pcl_talker.cpp
test/: CMakeLists.txt  test_array_helper.cpp  test_endian.cpp  test_image_encodings.cpp  test_image_fill.cpp  test_open3d_conversions.cpp  test_opencv_conversions1.cpp  test_opencv_conversions2.cpp  test_pcl_conversions.cpp  test_pointcloud_iterator_1m.cpp  test_pointcloud_iterator_2m.cpp  test_pointcloud_iterator_4m.cpp  test_pointcloud_iterator_512k.cpp  test_pointcloud_iterator_8k.cpp  test_pointcloud_iterator_8m.cpp  test_rgb_colors.cpp
tool/: CMakeLists.txt  shm_image1m_bridge.cpp  shm_image2m_bridge.cpp  shm_image4m_bridge.cpp  shm_image512k_bridge.cpp  shm_image8k_bridge.cpp  shm_image8m_bridge.cpp  shm_image_bridge.hpp  shm_pcl1m_bridge.cpp  shm_pcl2m_bridge.cpp  shm_pcl4m_bridge.cpp  shm_pcl512k_bridge.cpp  shm_pcl8k_bridge.cpp  shm_pcl8m_bridge.cpp  shm_pcl_bridge.hpp
