<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shm_msgs</name>
  <version>0.1.0</version>
  <description>A package containing shared memory transport support related message definitions and demo.</description>
  <maintainer email="lzs_1993@qq.com">ZhenshengLee</maintainer>
  <license>Apache License 2.0</license>

  <author email="lzs_1993@qq.com">ZhenshengLee</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rosidl_cmake</test_depend>

  <depend>eigen</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_filters</depend>
  <depend>pcl_msgs</depend>
  <depend>rclcpp</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
